--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
 	</head>
 	
 	<body>
-		<script src="/js/jquery-2.1.1.min.js"></script>
+		<script src="/js/jquery-2.2.1.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
 
-		<script type="text/javascript">
-			var socket = io();
-		</script>
+		<script src="/js/app.js"></script>
 
 	</body>
 </html>
