--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,19 @@
 	</head>
 	
 	<body>
+
+		<div class="messages">
+			<!-- Messages end up here -->
+
+		</div>
+
+		<form id="message-form">
+			<input type="text" name="message"/>
+			<input type="submit"/>
+		</form>
+
 		<script src="/js/jquery-2.2.1.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
-
 		<script src="/js/app.js"></script>
 
 	</body>
