--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 		<script src="/js/jquery-2.2.1.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
 		<script src="/js/app.js"></script>
+		<script src="/js/moment.js"></script>
 
 	</body>
 </html>
