--- a/public/index_old.html
+++ b/public/index_old.html
@@ -2,22 +2,26 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Socket.io Basics</title>
+		<title>Socket.io basics</title>
 	</head>
+	
 	<body>
+
 		<div class="messages">
-			<!-- Messages end up here! -->
+			<!-- Messages end up here -->
+
 		</div>
-		
+
 		<form id="message-form">
 			<input type="text" name="message"/>
-			<input type="submit"/>	
+			<input type="submit"/>
 		</form>
 
-		<script src="/js/jquery-2.1.4.min.js"></script>
+		<script src="/js/jquery-2.2.1.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
-		<script src="/js/moment.js"></script>
-		<script src="/js/QueryParams.js"></script>
 		<script src="/js/app.js"></script>
+		<script src="/js/QueryParams.js"></script>
+		<script src="/js/moment.js"></script>
+
 	</body>
 </html>
