--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,16 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Socket.io Basics</title>
+		<title>Little Chat App!</title>
 	</head>
 	<body>
-		<div class="messages">
-			<!-- Messages end up here! -->
-		</div>
-		
-		<form id="message-form">
-			<input type="text" name="message"/>
-			<input type="submit"/>	
-		</form>
+		<h1>Join Chat</h1>
 
-		<script src="/js/jquery-2.1.4.min.js"></script>
-		<script src="/js/socket.io-1.3.7.js"></script>
-		<script src="/js/moment.js"></script>
-		<script src="/js/QueryParams.js"></script>
-		<script src="/js/app.js"></script>
+		<form action="/chat.html">
+			<label>Display Name</label>
+			<input type="text" name="name" />
+			<input type="submit" value="Join chat" />
+
+		</form>
 	</body>
 </html>
