Added support for chat rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Socket.io Basics</title>
+		<title>Little Chat App!</title>
 	</head>
 	<body>
 
-		<a href="/index.html">Change name</a>
+		<a href="/index.html">Change settings</a>
+
+		<h1 class="room-title"></h1>
 
 		<div class="messages">
 			<!-- Messages end up here! -->
