--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
 		<title>Little Chat App!</title>
 	</head>
 	<body>
-		<h1>Join Chat</h1>
+		<h2>Join Chat</h2>
 
 		<form action="/chat.html">
 			<label>Display Name</label>
 			<input type="text" name="name" />
+			<br> <br>
+			<label>Room Name</label>
+			<input type="text" name="room">
+			<br> <br>
 			<input type="submit" value="Join chat" />
-
 		</form>
 	</body>
 </html>
