--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,45 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Little Chat App!</title>
-	</head>
-	<body>
-		<h2>Join Chat</h2>
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/styles.css">
 
-		<form action="/chat.html">
-			<label>Display Name</label>
-			<input type="text" name="name" />
-			<br> <br>
-			<label>Room Name</label>
-			<input type="text" name="room">
-			<br> <br>
-			<input type="submit" value="Join chat" />
-		</form>
+<!-- Latest compiled and minified CSS -->
+<!--
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+-->
+	</head>
+
+	<body>
+		<div class="vertical-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-md-offset-4 well">
+						<h2>Join Chat</h2>
+						<form action="/chat.html">
+							<div class="form-group">
+								<label>Display Name</label>
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="glyphicon glyphicon-user"></i>
+									</span>
+									<input type="text" name="name" class="form-control"/>
+								</div>
+							</div>
+							<div class="form-group">
+								<label>Room Name</label>
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="glyphicon glyphicon-comment"></i>
+									</span>
+									<input type="text" name="room" class="form-control">
+								</div>
+							</div>
+							<input type="submit" class="btn btn-primary btn-block" value="Join chat" />
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
