--- a/public/chat.html
+++ b/public/chat.html
@@ -3,21 +3,30 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Little Chat App!</title>
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	</head>
+
 	<body>
 
-		<a href="/index.html">Change settings</a>
+		<div class="well">
 
-		<h1 class="room-title"></h1>
+			<a href="/index.html">Change settings</a>
 
-		<div class="messages">
-			<!-- Messages end up here! -->
+			<h1 class="room-title"></h1>
+
+			<div class="messages">
+				<!-- Messages end up here! -->
+			</div>
+			
+			<form id="message-form">
+				<input type="text" name="message"/>
+				<input type="submit"/>	
+			</form>
+
 		</div>
-		
-		<form id="message-form">
-			<input type="text" name="message"/>
-			<input type="submit"/>	
-		</form>
+
+	
 
 		<script src="/js/jquery-2.1.4.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
