--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,13 @@
 		<title>Little Chat App!</title>
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/styles.css">
+
+		<style type="text/css">
+			.well {
+				margin-top: 35px;
+			}
+
+		</style>
 	</head>
 
 	<body>
@@ -12,34 +19,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 well">
-
 					<a href="/index.html">Change settings</a>
-
-					<h1 class="room-title"></h1>
-
+					<h2 class="room-title text-center"></h2>
+					<h4>Currently connected users:</h4>
+					<p class="connected-users"></p>
 					<ul class="messages list-group">
 						<!-- Messages end up here! -->
 					</ul>
-					
 					<form id="message-form">
-
 						<div class="form-group">
-
 							<div class="input-group">
 								<span class="input-group-addon">
 									<i class="glyphicon glyphicon-comment"></i>
 								</span>
 								<input type="text" name="message" class="form-control"/>
 							</div>
-
 						</div>
-						
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary btn-block"/>
 						</div>
-
 					</form>
-
 				</div>
 			</div>
 		</div>
