--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 well">
-						<h2>Join Chat</h2>
+						<h2 class="text-center">Join Chat</h2>
 						<form action="/chat.html">
 							<div class="form-group">
 								<label>Display Name</label>
