Added bootstrap viewport in chat.html

--- a/public/chat.html
+++ b/public/chat.html
@@ -2,9 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Little Chat App!</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/styles.css">
+
+		<title>Little Chat App!</title>
 
 		<style type="text/css">
 			.well {
@@ -12,6 +15,7 @@
 			}
 
 		</style>
+
 	</head>
 
 	<body>
